/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Cristiam Enciso
 */

package ucf.assignments;

public class ListItem {
    private String itemName;
    private String date;
    private String status = "incomplete";

    public String getItem() {
        return itemName;
    }

    public void setItem(String item) {
        // Set item name with value in the parameter
    }

    public String getDate() {
        return date;
    }
    public void setDate(String date) {
        // set date with the date value in the parameter
    }

    public String getStatus() {
        return status;
    }

    public void setStatus(String status) {
        // set status with the variable provided in parameter
    }

}
